# hw-codesign

./: .dockerignore  .gitattributes  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  Makefile  NOTICE  PYPI_README.md  README.md  SECURITY.md  package-lock.json  package.json  pyproject.toml
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: board-family.yml  bug.yml  config.yml
.github/workflows/: ci.yml  pages.yml  release.yml
benchmarks/: design_benchmark_20260628_215105.json  design_benchmark_4802f358.json  design_benchmark_5eab0a5d.json  design_benchmark_655cc14e.json  design_benchmark_6c8e43db.json  design_benchmark_b204035a.json
cli/: hw.py
docker/: Dockerfile  docker-compose.yml
docs/: STATUS.md  adapting-a-spec.md  architecture.md  capabilities.md  first-run.md  h1-physics-evidence-plan.md  mcp-tools.md  roadmap.md  validation-contract.md
docs/demo/: README.md  bundle.json  index.html
docs/launch/: announcement.md  repository-settings.md  starter-issues.md  traction-plan.md
examples/: README.md
examples/ble-sensor-node/: README.md
examples/robotics-motor-controller/: README.md
examples/sensor-data-logger/: README.md
packaging/: entry_hw.py  entry_hw_mcp.py  hw.spec
parts/components/: avr_32u4_hid.yaml  bldc_esc.yaml  common_passives.yaml  esp32_wifi_gateway.yaml  interface_ics.yaml  lora_sensor_node.yaml  memory.yaml  motion_sensors.yaml  power_management.yaml  robotics_controller.yaml  samd21_sensor_hub.yaml  sensor_data_logger.yaml  stm32g0_power_monitor.yaml  usb_hid_controller.yaml
parts/evidence/: datasheets.yaml
parts/kicad_symbols/: Connector_Generic.kicad_sym
parts/role_sets/: avr_32u4_hid.yaml  bldc_esc.yaml  ble_sensor_node.yaml  esp32_wifi_gateway.yaml  lora_sensor_node.yaml  nrf52840_dongle.yaml  robotics_controller.yaml  rp2040_usb_device.yaml  samd21_sensor_hub.yaml  sensor_data_logger.yaml  stm32g0_power_monitor.yaml  usb_hid_controller.yaml
parts/schemas/: component.schema.json  evidence_catalog.schema.json  role_set.schema.json  supplier_catalog.schema.json
parts/suppliers/: curated.yaml  digikey.yaml  lcsc_jlcpcb.yaml  mouser.yaml  octopart.yaml
plugins/hw-codesign/: .mcp.codex.json  .mcp.json  README.md
projects/bench_ble_lipo_sensor_5eab0a5d/: project.yaml
projects/bench_robotics_controller_5eab0a5d/: project.yaml
projects/bench_rp2040_usb_hid_b204035a/: project.yaml
projects/bench_sensor_logger_usb_b204035a/: project.yaml
projects/ble_sensor_node/history/iterations/0002/firmware/reference/: CMakeLists.txt
projects/golden_rp2040_usb_hid/: .gitignore  README.md  project.yaml
schemas/: electrical.schema.json  error.schema.json  firmware.schema.json  gate_event.schema.json  job_status.schema.json  job_submit.schema.json  mechanical.schema.json  project_parts.schema.json  release.schema.json  requirements.schema.json  review_bundle.schema.json  system.schema.json
scripts/: bootstrap_toolchains.sh  build_review_3d_viewer.py  refresh_demo.py
server/: mcp_server.py
server/tools/: __init__.py
src/hw_codesign/: __init__.py  artifacts.py  board_layout.py  cli.py  diagnostics.py  electronics_design.py  errors.py  footprint_library.py  generators.py  io.py  job_worker.py  jobs.py  mcp_server.py  mechanical_contract.py  models.py  pcb_router.py  placement.py  policy.py  power_sim.py  processes.py  project_parts.py  provenance.py  reference_backend.py  resolver.py  resources.py  review_3d.py  review_3d_viewer.bundle.js  review_3d_viewer.bundle.json  service.py  (+8 more)
tests/: conftest.py  test_ble_sensor_node.py  test_design_benchmark.py  test_electronics_backends.py  test_electronics_topology.py  test_footprint_library.py  test_harness_loop.py  test_jobs.py  test_mcp_stdio.py  test_mechanical_parts.py  test_mechanical_scope.py  test_mini_servo_robot.py  test_p0_fixes.py  test_p1_p3_platform.py  test_placement.py  test_power_sim.py  test_project_parts.py  test_reference_backend.py  test_release_metadata.py  test_review_3d.py  test_review_bundle.py  test_review_sharing.py  test_root_cause_diagnostics.py  test_rp2040_native_geometry.py  test_rp2040_reference_contract.py  test_schematic_generator.py  test_sensor_data_logger.py  test_service.py  test_supplier_resolution.py  test_toolchain_provisioning.py  test_validation.py  test_via_in_pad_qualification.py  test_workspace.py  test_zephyr_backend.py
(+1140 files in other folders)
