[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hw-codesign-platform"
version = "0.1.0"
description = "Verifiable agentic hardware co-design platform"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "PyYAML>=6.0.2",
  "jsonschema>=4.23",
  "kicad-sch-api==0.5.6",
]

[project.optional-dependencies]
mcp = ["mcp>=1.0"]
cad = ["cadquery-ocp==7.9.3.1.1"]
dev = ["pytest>=8.3", "pytest-cov>=6.0"]

[project.scripts]
hw = "hw_codesign.cli:main"
hw-mcp = "hw_codesign.mcp_server:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
hw_codesign = ["templates/*.yaml"]

[tool.setuptools.data-files]
"share/hw-codesign/schemas" = ["schemas/*.json"]
"share/hw-codesign/parts/components" = ["parts/components/*.yaml"]
"share/hw-codesign/parts/evidence" = ["parts/evidence/*.yaml"]
"share/hw-codesign/parts/role_sets" = ["parts/role_sets/*.yaml"]
"share/hw-codesign/parts/schemas" = ["parts/schemas/*.json"]
"share/hw-codesign/parts/suppliers" = ["parts/suppliers/*.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["src"]
